[S06P22A203-238] fix : character not showing resolved

--- a/frontend/components/image/image.module.css
+++ b/frontend/components/image/image.module.css
@@ -17,6 +17,7 @@
 
 .background {
   width: 101%;
+  z-index: 1;
 }
 
 .logo {
