--- a/frontend/containers/canvas/canvas.module.css
+++ b/frontend/containers/canvas/canvas.module.css
@@ -12,11 +12,13 @@
 .character {
   position: absolute;
   width: 60%;
+  z-index: 2;
 }
 
 .item {
   position: absolute;
   width: 35%;
+  z-index: 2;
 }
 
 .none {
